--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
 
 
 
@@ -42,5 +44,9 @@ dependencies {
     compile 'com.craftman.cardform:cardform:0.0.2'
     compile 'com.github.medyo:android-about-page:1.2.1'
     compile 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
+    compile 'com.google.firebase:firebase-database:10.2.6'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
