--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,7 @@
         <activity android:name=".LegalActivity" />
         <activity android:name=".AboutSidebarActivity" />
         <activity android:name=".ReportBugActivity" />
-        <activity android:name=".FirstTImeUserActivity"></activity>
+        <activity android:name=".FirstTimeUserActivity"></activity>
     </application>
 
 </manifest>
