--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,18 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
+    packagingOptions{
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
+
     defaultConfig {
         multiDexEnabled true
         applicationId "com.accmxxgmail.shuttlrdemo"
@@ -46,6 +58,8 @@ dependencies {
     compile 'com.github.medyo:android-about-page:1.2.1'
     compile 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
     compile 'com.google.firebase:firebase-database:10.2.6'
+    compile 'com.firebase:firebase-client-android:2.5.2'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'com.braintreepayments:card-form:3.0.5'
 
     testCompile 'junit:junit:4.12'
