--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
         <activity android:name=".LegalActivity" />
         <activity android:name=".AboutSidebarActivity" />
         <activity android:name=".ReportBugActivity" />
-        <activity android:name=".FirstTimeUserActivity"></activity>
+        <activity android:name=".FirstTimeUserActivity"/>
     </application>
 
 </manifest>
