--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.2.6'
     compile 'com.google.android.gms:play-services-places:10.2.6'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:preference-v7:25.0.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.hotchemi:permissionsdispatcher:2.3.1'
     compile 'com.github.medyo:android-about-page:1.2.1'
